# VS-P2P-Voice-Chat

./: CMakeLists.txt  README.md  cconnectremotewidget.cpp  cconnectremotewidget.h  cconnectremotewidget.ui  channel.h  channel_overview_widget.cpp  channel_overview_widget.h  channel_widget.cpp  channel_widget.h  connect_remote_widget.cpp  connect_remote_widget.cpp.bak  connect_remote_widget.h  mainwindow.cpp  mainwindow.h  metadata.h  metadata_client.cpp  metadata_client.h  metadata_provider.cpp  metadata_provider.h  metadata_server.cpp  metadata_server.h  port_discovery.cpp  port_discovery.h  random_helper.h  voice_client.cpp  voice_client.h
uml/: seqIdent.puml  seqJoinChannel.puml
